--- a/style.css
+++ b/style.css
@@ -1,1 +1,63 @@
-/* CSS */
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+body {
+  font-family: "Russo One", "Anton", sans-serif;
+  background-image: url("./img/background.gif");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  top: 0;
+  height: 100%;
+}
+.container {
+  width: 80%;
+}
+
+.main-header {
+  padding-top: 10rem;
+  padding-bottom: 5rem;
+}
+
+.btn {
+  /* padding: 0.375rem 3rem; */
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px #eee;
+  border: 1px solid #ced4da;
+}
+
+.btn:hover {
+  background-position: right center;
+  color: #222;
+}
+
+#search-btn {
+  background-image: linear-gradient(
+    to right,
+    #e040fb 0%,
+    #00bcd4 51%,
+    #e040fb 100%
+  );
+}
+
+#search_output img {
+  max-height: 150px;
+  width: auto;
+  margin: 0.1rem;
+}
